2007-06-28 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/configure.in, sim/ucsim/configure, sim/ucsim/ddconfig_in.h:
	  find out the endianess of host machine for ucsim

2007-06-27 Borut Razem <borut.razem AT siol.net>

	* support/regression/generate-cases.py: corrected the file name
	  in warning
	* configure.in, configure, sdccconf_in.h: find out the endianess of
	  host machine
	* src/SDCC.y: fixed bug #1744146: Crash when compiling array of
	  negative size

2007-06-27 Gudjon I. Gudjonsson <gudjon AT gudjon.org>

	* device/include/mcs51/p89c66x.h: NXP header file, OK to change licence

2007-06-26 Borut Razem <borut.razem AT siol.net>

	* support/regression/generate-cases.py: display warning if function
	  list is empty; implemented more flexible rule for detection of
	  testing functions, allowing return type 'void' in the same line as
	  the function name in the function definition
	* support/regression/tests/bug-1654060.c: corrected test
	* support/librarian/sdcclib.c: fixed warning:
	  format '%s' expects type 'char *', but argument 2 has type 'int'

2007-06-25 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* support/librarian/sdcclib.c: Added feature Requests [1510635]
	  Multiple infiles for sdcclib.

2007-06-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
	* src/SDCCast.c (inlineFindMaxBlockno, createFunction): fixed
	  bug 1731741

2007-06-18 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: removed option -C since SDCC compiler doesn't know
	  how to handle comments, so they have to be removed by the
	  preprocessor; fixed bug #1738926:SDCC #4852: broken option -V
	* src/SDCCmain.c, src/SDCCargs.h, src/ds390/main.c, src/mcs15/main.c,
	  src/pic16/main.c, src/pic/main.c, src/z80/main.c,
	  support/Util/SDCCerr.c, support/Util/SDCCerr.h:
	  table driven option hadling

2007-06-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (decorateType),
	* src/SDCCicode.c (geniCodeConditional): moved optimization for '?' from